# Libft

./: .ccls  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.zig  libft.h  main.c
array/: CMakeLists.txt  array.h  ft_array.h  ft_arrdup.c  ft_arrfree.c  ft_arrlen.c  ft_arrprint.c  ft_resize_array.c
ctype/: CMakeLists.txt  ctype.c  ctype.h  ft_ctype.c  ft_ctype.h
gnl/: CMakeLists.txt  ft_get_next_line.c  ft_get_next_line_utils.c  get_next_line.h
header/: ft_printf.h  get_next_line.h  libft.h
include/: ft_printf.h  libft.h
io/: CMakeLists.txt  ft_io.h  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c
list/: CMakeLists.txt  ft_list.h  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c
printf/: CMakeLists.txt  ft_printf.c  ft_printf.h  ft_printf_utils_nbr.c  ft_printf_utils_str.c
src/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_iscstr.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_isxdigit.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  (+11 more)
string/: CMakeLists.txt  ft_atoi.c  ft_atol.c  ft_bytecpy.c  ft_bzero.c  ft_calloc.c  ft_count_words.c  ft_itoa.c  (+42 more)
(+94 files in other folders)
